etc/docker/openshift/route.yaml
################################################################################
##      Copyright (C) 2020        Sebastian Francisco Colomar Bauza           ##
##      Copyright (C) 2020        Alejandro Colomar Andrés                    ##
##      SPDX-License-Identifier:  GPL-2.0-only                                ##
################################################################################

apiVersion: route.oopenshift.io/v1
kind: Route
metadata:
    name: www-route
spec:
    port:
        targetPort: 8080
    tls:
        insecureEdgeTerminationPolicy: Redirect
        termination: edge
    to:
        kind: Service
        name: www
